criando endpoit para excluir allocation e fazendo o teste de integração
