# service/src/main/java/br/com/sw2u/realmeet/controller/AllocationController.java
@@ -12,6 +12,8 @@ import br.com.sw2u.realmeet.util.ResponseEntityUtils;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import static java.util.concurrent.CompletableFuture.runAsync;
+
 @RestController
 public class AllocationController implements AllocationsApi {
     
@@ -27,5 +29,10 @@ public class AllocationController implements AllocationsApi {
     public CompletableFuture<ResponseEntity<AllocationDTO>> createAllocation(CreateAllocationDTO createAllocationDTO) {
         return CompletableFuture.supplyAsync(() -> allocationService.createAllocation(createAllocationDTO), controllersExecutor).thenApply(
                 ResponseEntityUtils::created);
+    }
+    
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> deleteAllocation(Long id) {
+        return runAsync(() -> allocationService.deleteAllocation(id), controllersExecutor).thenApply(ResponseEntityUtils::noContent);
     }
 }
