# service/src/main/resources/api.yml
@@ -121,6 +121,29 @@ paths:
         422:
           $ref: '#/components/responses/UnprocessableEntity'
 
+  /allocations/{id}:
+    delete:
+      summary: 'Deletes an allocation by id'
+      operationId: deleteAllocation
+      tags:
+        - allocation
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the allocation
+          schema:
+            type: integer
+            format: int64
+      responses:
+        204:
+          description: 'Deleted Succesfully'
+        404:
+          description: 'Not Found'
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+
+
 components:
   schemas:
     UpdateRoomDTO:
